--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <section>
             <h3 class="section-title">What I do</h3>
             <p id="what-i-do-description" class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            
             <div class="skills-container">
                 <!-- .skills*4>img+h3.skill-title+p.skill-description -->
 
@@ -95,6 +96,65 @@
                     <img src="images/icons/mongo.png" alt="">
                     <h3 class="skill-title">MongoDB</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section  -->
+
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-contailer">
+                <!-- .resume-colum*2>h3.resume-colum-title -->
+
+                <div class="resume-colum">
+                    <h3 class="resume-colum-title">My Education</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                        <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                </div>
+                <div class="resume-colum">
+                    <h3 class="resume-colum-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description"></p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title">Sr. Font End Developer</h2>
+                        <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                
                 </div>
             </div>
         </section>
