--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <section>
             <h3 class="section-title">A summary of My Resume</h3>
 
-            <div class="resume-contailer">
+            <div class="resume-container">
                 <!-- .resume-colum*2>h3.resume-colum-title -->
 
                 <div class="resume-colum">
@@ -145,7 +145,8 @@
                     <div class="resume-item">
                         <h2 class="resume-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description"></p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                     </div>
                     <hr>
                     <div class="resume-item">
@@ -156,6 +157,10 @@
                     </div>
                 
                 </div>
+            </div>
+
+            <div class="download-cv">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
 
