--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </main>
     <footer>
 
-        <div class="footer-colum">
+        <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
 
@@ -179,8 +179,15 @@
             </div>
         
         </div>
-        <div class="footer-colum">
+        <div class="footer-column">
             <h3 class="section-title">Let’s Message me</h3>
+
+            <form class="contact">
+                <input type="text" placeholder="You Name">
+                <input type="email" placeholder="You Email">
+                <textarea name="" placeholder="Massage" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" placeholder="Submit">
+            </form>
         </div>
 
     </footer>
